# probable-dollop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: FEATURE-METRICS.md  _features.yaml
docs/recipes/: apply.md  escape-hatches.md
examples/: README.md  apply_lifecycle.py  idempotent_ci.py  launch_boot_script.py  launch_docker.py  prototype_to_yaml.py  quickstart.py  workload.yaml
examples/after/: idempotent_redeploy.py  launch_cheapest_a100.py  launch_vllm_inference.py  teardown_by_name.py
examples/before/: idempotent_redeploy.py  launch_cheapest_a100.py  launch_vllm_inference.py  teardown_by_name.py
examples/cli/: COMMANDS.md
examples/manifests/: boot-script-body.yaml  boot-script-steps.yaml  boot-script.yaml  deploy-git-repo.yaml  docker-with-secrets.yaml  minimal-docker.yaml  minimal.yaml  multi-region-gpu.yaml  vllm-inference.yaml
examples/python/: 01_quickstart_launch.py  02_inventory_browse.py  03_imperative_lifecycle.py  04_plan_apply_destroy.py  05_fluent_docker_builder.py  06_fluent_boot_script.py  07_secrets_and_env.py  08_context_manager.py  09_from_yaml.py  10_prototype_to_yaml.py  11_docker_workload_direct.py  12_inventory_region_fallback.py  13_ssh_keys_list.py  14_client_run_composite.py  15_deploy_git_repo.py  _common.py
scripts/: build_feature_metrics.py  e2e_deploy_repo.py  e2e_examples_offline.py  install-cli.sh  live_test_boot_script.py  live_test_cycle.py  live_test_docker.py
src/substrate/: __init__.py  client.py  config.py
src/substrate/_http/: __init__.py  auth.py  client.py  errors.py  logging.py  retries.py
src/substrate/cli/: __init__.py  _common.py  config_cmd.py  instance_cmd.py  inventory_cmd.py  main.py  manifest_cmd.py  ops_cmd.py  run_cmd.py  workload_cmd.py
src/substrate/declarative/: __init__.py  apply.py  builder.py  duration.py  executor.py  lower.py  manifest.py
src/substrate/models/: __init__.py  enums.py  instance.py  inventory.py  launch_config.py  ssh_key.py
src/substrate/resources/: __init__.py  _base.py  instances.py  inventory.py  ssh_keys.py
src/substrate/workloads/: __init__.py  base.py  docker.py  secret.py
src/substrate/workloads/boot_script/: __init__.py  builder.py  steps.py  workload.py
src/substrate/workloads/presets/: __init__.py  inference.py
src/substratecloud/: __init__.py  client.py  config.py
src/substratecloud/_http/: __init__.py  auth.py  client.py  errors.py  logging.py
src/substratecloud/cli/: __init__.py  _common.py  config_cmd.py  instance_cmd.py  inventory_cmd.py  main.py  manifest_cmd.py  ops_cmd.py  run_cmd.py  workload_cmd.py
src/substratecloud/declarative/: __init__.py  apply.py  builder.py  executor.py  lower.py  manifest.py
src/substratecloud/models/: __init__.py  enums.py  instance.py  launch_config.py
src/substratecloud/resources/: __init__.py  _base.py  instances.py  inventory.py  ssh_keys.py
src/substratecloud/workloads/: __init__.py  base.py  docker.py  secret.py
src/substratecloud/workloads/boot_script/: __init__.py  builder.py  steps.py  workload.py
src/substratecloud/workloads/presets/: __init__.py  inference.py
tests/: conftest.py  test_examples.py
tests/unit/: test_cli_manifest.py  test_config.py  test_declarative_apply.py  test_declarative_builder.py  test_declarative_manifest.py  test_http.py  test_resources.py  test_workloads.py
